objects/maps__LiveDriver__c.object
<CustomObject>
    <fields>
        <fullName>maps__DriverId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EmailUsedForTelematicsAlerts__c</fullName>
        <description>Email used for receiving Telematics Alerts</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email used for receiving Telematics Alerts</inlineHelpText>
        <label>Email Used for Telematics Alerts</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>maps__FirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HomeCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HomeCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HomeFullAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Full Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__HomePostalCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HomeState__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HomeStreetAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LiveWorkingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Driver&apos;s specific working hours</description>
        <inlineHelpText>Lookup to the Driver&apos;s specific working hours</inlineHelpText>
        <label>Live Working Hours</label>
        <referenceTo>maps__LiveWorkingHours__c</referenceTo>
        <relationshipLabel>Live Drivers</relationshipLabel>
        <relationshipName>LiveDrivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Location__c</fullName>
        <description>Lat/Long values for this driver&apos;s home address</description>
        <inlineHelpText>Lat/Long values for this driver&apos;s home address</inlineHelpText>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__ReceiveDeviceDisconnectAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Device Disconnect Alerts</description>
        <inlineHelpText>Indicate if driver should receive Device Disconnect Alerts</inlineHelpText>
        <label>Receive Device Disconnect Alerts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ReceiveHardAccelAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Hard Accel Alerts</description>
        <inlineHelpText>Indicate if driver should receive Hard Accel Alerts</inlineHelpText>
        <label>Receive Hard Accel Alerts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ReceiveHardBrakingAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Hard Braking Alerts</description>
        <inlineHelpText>Indicate if driver should receive Hard Braking Alerts</inlineHelpText>
        <label>Receive Hard Braking Alerts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ReceiveMaxSpeedThresholdAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Max Speed Threshold Alerts</description>
        <inlineHelpText>Indicate if driver should receive Max Speed Threshold Alerts</inlineHelpText>
        <label>Receive Max Speed Threshold Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ReceivePostedSpeedAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Posted Speed Alerts</description>
        <inlineHelpText>Indicate if driver should receive Posted Speed Alerts</inlineHelpText>
        <label>Receive Posted Speed Alerts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ReceiveStopAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if driver should receive Stop Alerts</description>
        <inlineHelpText>Indicate if driver should receive Stop Alerts</inlineHelpText>
        <label>Receive Stop Alerts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LiveDrivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Live Driver</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Live Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>